# sprout

./: .env.example  .gitignore  Cargo.toml  Dockerfile  TESTING.md  VISION.md  VISION_MESH.md  deny.toml  docker-compose.yml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prometheus.yml  renovate.json
.github/: CODEOWNERS
crates/buzz-acp/: Cargo.toml  README.md
crates/buzz-acp/src/: acp.rs  base_prompt.md  config.rs  engram_fetch.rs  filter.rs  lib.rs  main.rs  observer.rs  pool.rs  queue.rs  relay.rs
crates/buzz-admin/: Cargo.toml
crates/buzz-admin/src/: main.rs
crates/buzz-agent/: Cargo.toml  README.md
crates/buzz-agent/src/: agent.rs  auth.rs  config.rs  handoff.rs  hints.rs  lib.rs  llm.rs  main.rs  mcp.rs  types.rs  wire.rs
crates/buzz-agent/tests/: databricks_oauth.rs  fake_llm.rs  golden_transcripts.rs  hints_integration.rs  openai_auto_upgrade.rs  regressions.rs
crates/buzz-audit/: Cargo.toml
crates/buzz-audit/src/: action.rs  entry.rs  error.rs  hash.rs  lib.rs  schema.rs  service.rs
crates/buzz-auth/: Cargo.toml
crates/buzz-auth/src/: access.rs  error.rs  lib.rs  nip42.rs  nip98.rs  rate_limit.rs  scope.rs
crates/buzz-cli/: Cargo.toml  README.md  TESTING.md
crates/buzz-cli/src/: client.rs  error.rs  lib.rs  main.rs  validate.rs
crates/buzz-cli/src/commands/: channels.rs  dms.rs  emoji.rs  feed.rs  mem.rs  messages.rs  mod.rs  notes.rs  pack.rs  reactions.rs  repos.rs  social.rs  upload.rs  users.rs  workflows.rs
crates/buzz-core/: Cargo.toml
crates/buzz-core/src/: channel.rs  engram.rs  error.rs  event.rs  filter.rs  git_perms.rs  kind.rs  lib.rs  network.rs  observer.rs  presence.rs  verification.rs
crates/buzz-core/src/pairing/: NIP-AB.md  NIP-AB.spthy  crypto.rs  mod.rs  qr.rs  session.rs  types.rs
crates/buzz-db/: Cargo.toml
crates/buzz-db/src/: api_token.rs  archived_identities.rs  channel.rs  dm.rs  error.rs  event.rs  feed.rs  lib.rs  partition.rs  reaction.rs  relay_members.rs  thread.rs  user.rs  workflow.rs
crates/buzz-dev-mcp/: Cargo.toml
crates/buzz-dev-mcp/src/: lib.rs  main.rs  read_file.rs  rg.rs  shell.rs  shim.rs  str_replace.rs  todo.rs  tree.rs
crates/buzz-media/: Cargo.toml
crates/buzz-media/src/: auth.rs  config.rs  error.rs  lib.rs  storage.rs  thumbnail.rs  types.rs  upload.rs  validation.rs
crates/buzz-pair-relay/: Cargo.toml
crates/buzz-pair-relay/src/: lib.rs  main.rs
crates/buzz-pair-relay/tests/: integration.rs
crates/buzz-pairing-cli/: Cargo.toml  README.md
crates/buzz-pairing-cli/src/: main.rs
crates/buzz-persona/: Cargo.toml  PERSONA_PACK_SPEC.md
crates/buzz-persona/src/: lib.rs  manifest.rs  merge.rs  pack.rs  persona.rs  resolve.rs  validate.rs
crates/buzz-persona/tests/: e2e_env_flow.rs  integration.rs
crates/buzz-proxy/: Cargo.toml  README.md
crates/buzz-proxy/src/: channel_map.rs  error.rs  guest_store.rs  invite.rs  invite_store.rs  kind_translator.rs  lib.rs  main.rs  server.rs  shadow_keys.rs  translate.rs  upstream.rs
crates/buzz-pubsub/: Cargo.toml
crates/buzz-pubsub/src/: error.rs  lib.rs  presence.rs  publisher.rs  rate_limiter.rs  subscriber.rs
crates/buzz-relay/: Cargo.toml
crates/buzz-relay/examples/: mesh_serve_client_smoke.rs  mesh_serve_smoke.rs
crates/buzz-relay/src/: config.rs  connection.rs  error.rs  lib.rs  main.rs  mesh_status_publisher.rs  metrics.rs  nip11.rs  protocol.rs  router.rs  state.rs  subscription.rs  webhook_secret.rs  workflow_sink.rs
crates/buzz-relay/src/api/: bridge.rs  events.rs  media.rs  mod.rs  nip05.rs
crates/buzz-relay/src/api/git/: cas_publish.rs  hook.rs  hydrate.rs  manifest.rs  manifest_event.rs  mod.rs  policy.rs  store.rs  transport.rs
crates/buzz-relay/src/audio/: handler.rs  mod.rs  room.rs  wire.rs
crates/buzz-relay/src/handlers/: auth.rs  close.rs  command_executor.rs  count.rs  event.rs  identity_archive.rs  imeta.rs  ingest.rs  mesh_signaling.rs  mod.rs  relay_admin.rs  req.rs  side_effects.rs
crates/buzz-sdk/: Cargo.toml
crates/buzz-sdk/examples/: compute_auth_tag.rs
crates/buzz-sdk/src/: builders.rs  lib.rs  mentions.rs  nip_oa.rs
crates/buzz-search/: Cargo.toml
crates/buzz-search/src/: collection.rs  error.rs  index.rs  lib.rs  query.rs
crates/buzz-test-client/: Cargo.toml
crates/buzz-test-client/src/: lib.rs  main.rs
crates/buzz-test-client/tests/: e2e_git.rs  e2e_long_form.rs  e2e_media.rs  e2e_media_extended.rs  e2e_media_video.rs  e2e_mesh_llm.rs  e2e_nostr_interop.rs  e2e_relay.rs  e2e_rest_api.rs  e2e_tokens.rs  e2e_user_status.rs  e2e_workflows.rs
crates/buzz-workflow/: Cargo.toml
crates/buzz-workflow/src/: action_sink.rs  error.rs  executor.rs  lib.rs  schema.rs
crates/buzz-ws-client/: Cargo.toml
crates/buzz-ws-client/src/: connection.rs  error.rs  lib.rs  message.rs
crates/git-credential-nostr/: Cargo.toml  README.md
crates/git-credential-nostr/src/: lib.rs
crates/git-credential-nostr/tests/: integration.rs
crates/git-sign-nostr/: Cargo.toml  README.md
crates/git-sign-nostr/src/: lib.rs
crates/sprig/: Cargo.toml
crates/sprig/src/: main.rs
desktop/: playwright.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: events.rs  lib.rs  migration.rs
desktop/src-tauri/src/commands/: agent_discovery.rs  agent_models.rs  agent_settings.rs  agents.rs  legacy_storage.rs  media.rs  messages.rs  pairing.rs  personas.rs
desktop/src-tauri/src/huddle/: agents.rs
desktop/src-tauri/src/managed_agents/: discovery.rs  nest.rs  nest_skill.md  persona_card.rs  personas.rs  restore.rs  runtime.rs  teams.rs  types.rs
desktop/src-tauri/src/managed_agents/personas/: tests.rs
desktop/src-tauri/src/templates/: storage.rs  types.rs
docs/: MCP_DRIVEN_HOOKS.md  git-on-object-storage.md  mesh-llm-local-build.md
examples/: README.md
examples/countdown-bot/: Cargo.toml  README.md
examples/countdown-bot/src/: main.rs
patches/: isomorphic-git.patch
schema/: schema.sql
script/: start
scripts/: build-sprig.sh  bundle-sidecars.sh  dev-setup.sh  e2e-git-perms.sh  e2e-relay-membership.sh  instance-env.sh  run-tests.sh  (+6 more)
(+199 files in other folders)
