[workspace]
members = [
    "crates/buzz-relay",
    "crates/buzz-core",
    "crates/buzz-db",
    "crates/buzz-pubsub",
    "crates/buzz-auth",
    "crates/buzz-search",
    "crates/buzz-audit",
    "crates/buzz-acp",
    "crates/buzz-agent",
    "crates/sprig",
    "crates/buzz-proxy",
    "crates/buzz-test-client",
    "crates/buzz-ws-client",
    "crates/buzz-admin",
    "crates/buzz-workflow",
    "crates/buzz-media",
    "crates/buzz-cli",
    "crates/buzz-pairing-cli",
    "crates/buzz-sdk",
    "crates/buzz-persona",
    "crates/git-credential-nostr",
    "crates/git-sign-nostr",
    "crates/buzz-pair-relay",
    "crates/buzz-dev-mcp",
    "examples/countdown-bot",
]
exclude = ["desktop/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"
license = "Apache-2.0"
repository = "https://github.com/block/sprout"

[workspace.dependencies]
# Runtime
tokio       = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util", "signal", "process"] }
tokio-util  = { version = "0.7", features = ["rt", "codec"] }

# HTTP + WebSocket
axum        = { version = "0.8", features = ["ws", "macros"] }
tower       = { version = "0.5", features = ["timeout", "util"] }
tower-http  = { version = "0.6", features = ["trace", "cors", "compression-gzip", "limit", "fs"] }

# Database
sqlx = { version = "0.9", features = [
    "runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json"
] }

# Redis
redis        = { version = "1.0", features = ["tokio-comp", "connection-manager"] }
deadpool-redis = { version = "0.23", features = ["rt_tokio_1"] }

# Nostr
nostr = { version = "0.44", features = ["nip44", "nip98"] }

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
evalexpr    = "11"
cron        = "0.16"
# Observability
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }
metrics             = "0.24"
metrics-exporter-prometheus = "0.18"

# Error handling
thiserror = "2"
anyhow    = "1"

# Utilities
uuid    = { version = "1", features = ["v4", "serde"] }
chrono  = { version = "0.4", features = ["serde"] }

# HTTP client (webhook delivery, Typesense indexing)
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }

# Cryptography
sha2      = "0.11"
hex       = "0.4"
hmac      = "0.13"

# Randomness
rand = "0.10"
subtle = "2.6"
zeroize = "1.8"

# Concurrent data structures
dashmap = "6"
moka    = { version = "0.12", features = ["sync"] }

# Async stream utilities
futures-util = "0.3"

# WebSocket client (test client)
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
url = "2"

# MCP SDK (used by buzz-dev-mcp and buzz-agent)
rmcp = { version = "1.1.0", features = ["server", "transport-io", "macros"] }
schemars = { version = "1", default-features = false }

# Internal crates
buzz-core = { path = "crates/buzz-core" }
buzz-db = { path = "crates/buzz-db" }
buzz-auth = { path = "crates/buzz-auth" }
buzz-pubsub = { path = "crates/buzz-pubsub" }
buzz-search = { path = "crates/buzz-search" }
buzz-audit = { path = "crates/buzz-audit" }
buzz-proxy = { path = "crates/buzz-proxy" }
buzz-workflow = { path = "crates/buzz-workflow" }
buzz-media = { path = "crates/buzz-media" }
buzz-sdk = { path = "crates/buzz-sdk" }
buzz-ws-client = { path = "crates/buzz-ws-client" }

# CI profile — release-grade codegen for the relay so e2e tests hit a
# realistic binary, not an unoptimised debug build.  Inherits `release`
# defaults (opt-level 3, no debug-assertions) but keeps incremental
# compilation enabled and avoids LTO so the build stays fast.
[profile.ci]
inherits = "release"
lto = false

# Sprig profile — optimized for deploy-anywhere Sprig release artifacts.
# Sprig is distributed over the network and installed on fresh hosts, so binary
# size matters more than compile speed here. Keep this separate from the normal
# `release` profile so desktop/dev release builds do not inherit the slower
# size-focused settings unless they opt in explicitly.
[profile.sprig]
inherits = "release"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
