[package]
name = "sprout-admin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Operator CLI for Sprout relay administration"

[[bin]]
name = "sprout-admin"
path = "src/main.rs"

[dependencies]
sprout-db = { workspace = true }
sprout-core = { workspace = true }
sprout-auth = { workspace = true }
nostr = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
clap = { version = "4", features = ["derive"] }
