[package]
name = "sprout-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Authentication and authorization for Sprout"

[features]
test-utils = []
dev = []

[dependencies]
sprout-core = { workspace = true }
nostr        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
rand         = { workspace = true }
uuid         = { workspace = true }
url          = { workspace = true }
