[package]
name = "sprout-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent-first CLI for Sprout relay"

[lib]
name = "sprout_cli"
path = "src/lib.rs"

[[bin]]
name = "sprout"
path = "src/main.rs"

[dependencies]
# CLI argument parsing — derive macros + env var support (SPROUT_API_TOKEN auto-wired)
clap = { version = "4", features = ["derive", "env"] }

# HTTP client — async REST calls to the relay
reqwest = { workspace = true, features = ["json"] }

# Async runtime — tokio macros + multi-thread for reqwest
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# Serialization — JSON body building and response passthrough
serde = { workspace = true }
serde_json = { workspace = true }

# Structured error types with exit code mapping
thiserror = { workspace = true }

# Nostr event signing — used in `sprout auth`, auto-mint, and signed event writes
nostr = { workspace = true }

# UUID parsing for validate_uuid + event building
uuid = { workspace = true }

# Typed event builders for all write operations
sprout-sdk = { workspace = true }
sprout-core = { workspace = true }

# Base64 encoding — NIP-98 event serialization for Authorization header
base64 = "0.22"

# SHA-256 — NIP-98 payload hash tag, Blossom file hash, mem patch base-hash
sha2 = "0.11"

# Unified-diff parser and strict applier — `mem patch`
diffy = "0.5"

# Hex encoding — SHA-256 hash output for Blossom uploads
hex = { workspace = true }

# MIME type detection via magic bytes — file upload validation
infer = "0.19"

# URL parsing — extract server domain for Blossom auth tag
url = { workspace = true }

# Persona pack parsing, validation, and resolution
sprout-persona = { path = "../sprout-persona" }

# WebSocket client — ephemeral event publish (kind:20001 is WS-only on the relay)
sprout-ws-client = { path = "../sprout-ws-client" }
