[package]
name = "buzz-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, event verification, and filter matching for Sprout"

[features]
test-utils = []

[dependencies]
nostr      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
hex        = { workspace = true }
hmac       = { workspace = true }
sha2       = { workspace = true }
rand              = { workspace = true }
subtle            = { workspace = true }
zeroize           = { workspace = true }
percent-encoding  = "2.3"
url               = { workspace = true }

# NO tokio, NO sqlx, NO redis, NO axum — zero I/O dependencies
