[package]
name = "buzz-dev-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "buzz_dev_mcp"
path = "src/lib.rs"

[[bin]]
name = "buzz-dev-mcp"
path = "src/main.rs"

[dependencies]
buzz-cli = { path = "../buzz-cli" }
git-credential-nostr = { path = "../git-credential-nostr" }
git-sign-nostr = { path = "../git-sign-nostr" }
nostr = { workspace = true }
zeroize = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
similar = "3"
tempfile = "3"
ignore = "0.4.25"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# view_image tool: HTTP fetch (workspace reqwest is already used by buzz-cli;
# adding it here is essentially free), base64 encoding, and decode/resize.
reqwest = { workspace = true }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", default-features = false, features = ["signal", "process"] }
