[package]
name        = "buzz-pair-relay"
description = "Ephemeral sidecar relay for NIP-AB device pairing handshakes"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true

[lib]
name = "buzz_pair_relay"
path = "src/lib.rs"

[[bin]]
name = "buzz-pair-relay"
path = "src/main.rs"

[dependencies]
tokio            = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
tokio-tungstenite = { workspace = true }
serde_json       = { workspace = true }
futures-util     = { workspace = true }
tokio-util       = { workspace = true }
parking_lot      = "0.12"
hyper            = { version = "1", features = ["server", "http1"] }
hyper-util       = { version = "0.1", features = ["tokio"] }
http-body-util   = "0.1"
secp256k1        = { version = "0.31", features = ["global-context"] }
sha2             = "0.11"

[dev-dependencies]
tokio            = { workspace = true, features = ["test-util"] }
tokio-tungstenite = { workspace = true }
secp256k1        = { version = "0.31", features = ["global-context", "rand", "std"] }
sha2             = "0.11"
