[package]
name = "sprout-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Nostr client compatibility proxy for Sprout"

[dependencies]
sprout-core = { workspace = true }
nostr        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }
uuid         = { workspace = true }
chrono       = { workspace = true }
tracing      = { workspace = true }
thiserror    = { workspace = true }
sha2         = { workspace = true }
hex          = { workspace = true }
hmac         = { workspace = true }
dashmap      = { workspace = true }
moka         = { workspace = true }
reqwest      = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
url          = { workspace = true }
rand         = { workspace = true }
axum               = { workspace = true }
tower-http         = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "sprout-proxy"
path = "src/main.rs"
