[package]
name = "sprout-pubsub"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Redis pub/sub fan-out, presence, and typing indicators for Sprout"

[dependencies]
sprout-core = { workspace = true }
sprout-auth = { workspace = true }
redis = { workspace = true }
deadpool-redis = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
nostr = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
