[package]
name = "git-credential-nostr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Git credential helper that produces NIP-98 auth headers for Buzz's git server"

[lib]
name = "git_credential_nostr"
path = "src/lib.rs"

[[bin]]
name = "git-credential-nostr"
path = "src/main.rs"

[dependencies]
nostr      = { workspace = true }
serde_json = { workspace = true }
zeroize    = { workspace = true }
base64     = "0.22"
