[package]
name = "sprig"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "All-in-one Buzz ACP harness, agent, and developer MCP"

[[bin]]
name = "sprig"
path = "src/main.rs"

[dependencies]
buzz-acp = { path = "../buzz-acp" }
buzz-agent = { path = "../buzz-agent" }
buzz-dev-mcp = { path = "../buzz-dev-mcp" }
